--- a/notebooks/AT-0.2-model.ipynb
+++ b/notebooks/AT-0.2-model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,46 +94,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.498012189154\n"
-     ]
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=1,\n",
+       "            oob_score=False, random_state=3, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "clf = RandomForestClassifier(n_estimators=100, random_state=3)\n",
     "y_train = df_train.Label.values\n",
     "X_train = df_train[features].values\n",
-    "clf.fit(X_train, y_train)\n",
-    "\n",
-    "# Train score\n",
-    "yp_train = clf.predict_proba(X_train)[:, 1]\n",
-    "score_train = log_loss(y_train, yp_train, normalize=True)\n",
-    "print(score_train)"
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clip_preds(y):\n",
+    "    return np.clip(y, 0.05, 0.95)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validation Score"
+    "# Produce Scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.688018578408\n"
+      "0.502631235042\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train score\n",
+    "yp_train = clip_preds(clf.predict_proba(X_train)[:, 1])\n",
+    "score_train = log_loss(y_train, yp_train, normalize=True)\n",
+    "print(score_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.584818153863\n"
      ]
     }
    ],
@@ -142,7 +175,7 @@
     "X_valid = df_valid[features].values\n",
     "\n",
     "# Validation score\n",
-    "yp_valid = clf.predict_proba(X_valid)[:, 1]\n",
+    "yp_valid = clip_preds(clf.predict_proba(X_valid)[:, 1])\n",
     "score_valid = log_loss(y_valid, yp_valid, normalize=True)\n",
     "print(score_valid)"
    ]
@@ -156,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +226,7 @@
     "\n",
     "df_final_sub = (\n",
     "    df_interim_sub\n",
-    "    .assign(Pred=clf.predict_proba(X_sub)[:, 1])\n",
+    "    .assign(Pred=clip_preds(clf.predict_proba(X_sub)[:, 1]))\n",
     "    .assign(ID=df_interim_sub.apply(create_ID, axis=1))\n",
     "    .loc[:, ['ID', 'Pred']]\n",
     ")"
@@ -201,12 +234,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_final_sub.to_csv('../models/clf_submission.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
